--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --config build/webpack.dev.js",
-    "build:pro": "npx webpack --config build/webpack.pro.js"
+    "build:pro": "npx webpack --config build/webpack.pro.js --progress"
   },
   "repository": {
     "type": "git",
@@ -30,12 +30,14 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/runtime": "^7.18.3",
     "@babel/runtime-corejs3": "^7.18.3",
+    "@types/happypack": "^5.0.2",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
